--- a/_data/da361a.yml
+++ b/_data/da361a.yml
@@ -68,9 +68,9 @@ exercises:
 
     - name: Laboration 3
       file: L07
-#
-#    - name: Laboration 4
-#      file: L03
+
+    - name: Laboration 4
+      file: L03
 
 #    - name: Laboration 5
 #      file: L05
