--- a/_data/da361a.yml
+++ b/_data/da361a.yml
@@ -48,9 +48,9 @@ lectures:
 assignments:
     - name: Uppgift 1
       file: U01
-#
-#    - name: Uppgift 2
-#      file: U02
+
+    - name: Uppgift 2
+      file: U02
 
 # Laborationer
 exercises:
