Added extra lecture

--- a/_data/da361a.yml
+++ b/_data/da361a.yml
@@ -34,8 +34,8 @@ lectures:
     - name: Python - Mer om OOP
       file: F05
 
-#    - name: Python - Extra
-#      file: F06
+    - name: Python - Extra
+      file: F06
 
 #    - name: Python - Extra (recept)
 #      file: F07
