Preparing for HT19

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -2,10 +2,10 @@
 
 - name: Anton Tibblin
   github: tibbelit
-  email: anton.tibblin@mah.se
-  phone: 040-66 57672
+  email: anton.tibblin@mau.se
+  phone: 040-665 76 72
 
-- name: Aleksander Fabijan
-  github:
-  email: aleksander.fabijan@mah.se
-  phone: 040-66 58092
+- name: Johan Holmberg
+  github: koddas
+  email: johan.holmberg@mau.se
+  phone: 040-665 73 76
