--- a/_data/da361a.yml
+++ b/_data/da361a.yml
@@ -13,67 +13,37 @@ exams: true
 
 # Föreläsningar
 lectures:
-    - name: Kursintroduktion
-      file: F00
-
-    - name: Introduktion till UML
-      file: F01
-
-    - name: Python - recap
-      file: F02
-
-    - name: UML - Workshop
-      file: F001
-
-    - name: Python - Intro OOP
-      file: F03
-
-    - name: Python - Inheritance
-      file: F04
-
-    - name: Python - Mer om OOP
-      file: F05
-
-    - name: Python - Extra
-      file: F06
-
-#    - name: Python - Extra (recept)
-#      file: F07
-
-# - name: Föreläsning 6
-#   file: F07
+#    - name: Kursintroduktion
+#      file: F00
 
 # Uppgifter
 
 assignments:
-    - name: Uppgift 1
-      file: U01
+#    - name: Uppgift 1
+#     file: U01
 
-    - name: Uppgift 2
-      file: U02
+#    - name: Uppgift 2
+#      file: U02
 
 # Laborationer
 exercises:
-    - name: UML - Workshop
-      file: L0
-
-    - name: Laboration 0
+    - name: 1. Python, återblick
       file: L00
 
-    - name: Laboration 1
+    - name: 2. OOP i Python (1)
       file: L01
 
-    - name: Laboration 2
-      file: L02
+#    - name: Laboration 1
+#      file: L01
 
-    - name: Laboration 3
-      file: L07
+#    - name: Laboration 2
+#      file: L02
 
-    - name: Laboration 4
-      file: L04
+#    - name: Laboration 3
+#      file: L07
 
-    - name: Laboration 5
-      file: L03
+#    - name: Laboration 4
+#      file: L04
 
-# - name: Laboration 6
-#   file: E06
+#    - name: Laboration 5
+#      file: L03
