--- a/_data/da361a.yml
+++ b/_data/da361a.yml
@@ -22,7 +22,7 @@ lectures:
     - name: Introduktion till UML, OOAD & OOP, del 2
       file: F02
 
-    - name: IPython repetition
+    - name: Python repetition
       file: F03
 
 # Uppgifter
