Lade till föreläsning 5 + fix på föreläsning 4

--- a/_data/da361a.yml
+++ b/_data/da361a.yml
@@ -25,6 +25,9 @@ lectures:
     - name: Python repetition
       file: F03
 
+    - name: Introduktion till UML, OOAD & OOP, del 2
+      file: F04
+
 # Uppgifter
 
 assignments:
