Lade till föreläsning 8

--- a/_data/da361a.yml
+++ b/_data/da361a.yml
@@ -34,6 +34,9 @@ lectures:
     - name: OOP i Python (2)
       file: F06
 
+    - name: Konsistens mellan diagram och källkod
+      file: F07
+
 
 # Uppgifter
 
