--- a/_data/da361a.yml
+++ b/_data/da361a.yml
@@ -47,8 +47,8 @@ assignments:
     - name: Uppgift 1
       file: U01
 
-#    - name: Uppgift 2
-#      file: U02
+    - name: Uppgift 2
+      file: U02
 
 # Laborationer
 exercises:
